# plugin-curiosity

./: .gitignore  README.md  pyproject.toml
plugin_curiosity/: __init__.py  abilities.py  comms.py  dream.py  engine.py  feedback.py  gating.py  goals.py  loops.py  luna-plugin.toml  mission.py  models.py  overview.py  prompts.py  research.py  review.py  routes.py  scopes.py  setup_gate.py  telemetry.py  wikibind.py
plugin_curiosity/ui/: app.js  index.html  style.css
plugin_curiosity/ui/noc/: app.js  index.html  style.css
tests/: conftest.py  test_comms.py  test_current_state.py  test_dream.py  test_engine.py  test_engine_v2_mapper.py  test_goals.py  test_goals_delegation.py  test_hot_reload_convergence.py  test_kickoff.py  test_loading_indicator.py  test_loops.py  test_manifest.py  test_migration.py  test_mission.py  test_mission_kickoff.py  test_phase_10001.py  test_phase_10002.py  test_phase_10003.py  test_phase_10006.py  test_phase_9002.py  test_phase_one.py  test_prompt_primacy.py  test_prompts.py  test_research.py  test_review.py  test_scopes.py  test_skill_gating.py  test_slot_occupancy.py
