[project]
name = "plugin-curiosity"
version = "0.9.9"
description = "Mission-driven curiosity for Luna."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

[tool.setuptools]
packages = ["plugin_curiosity"]

[tool.setuptools.package-data]
plugin_curiosity = ["luna-plugin.toml", "ui/*", "ui/noc/*"]
